Prevent dialog box from overflowing logger's viewport
Related feedback:
- https://github.com/uBlockOrigin/uBlock-issues/discussions/2497#discussioncomment-5250170

--- a/src/css/logger-ui.css
+++ b/src/css/logger-ui.css
@@ -531,8 +531,9 @@ body[dir="rtl"] .closeButton {
     text-decoration: none;
     }
 .netFilteringDialog select {
-    max-width: 75%;
+    max-width: 50vw;
     outline: none;
+    text-overflow: ellipsis;
 }
 .netFilteringDialog > .preview {
     align-items: center;
